[package]
name = "leartech-ai-gateway"
version = "0.0.13"
authors = ["OpenAPI Generator team and contributors"]
description = "OpenAI-compatible model gateway. Callers use logical model names; the gateway routes to the best-fit provider (native / LiteLLM / sidecar)."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
mockall = { version = "^0.13", optional = true}
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
mockall = ["dep:mockall"]
