[package]
name = "leartech-mortgages-gw"
version = "0.1.4"
authors = ["OpenAPI Generator team and contributors"]
description = "Mortgages-domain gateway — MCP (streamable HTTP at /mcp) + REST (at /api/v1/_*) front door. Currently hosts mock sourcing tools for the ChatGPT integration spike; real downstream calls to leartech-mortgages-api land in a subsequent initiative. Calls leartech-mortgages-api via generated Go SDK once that's wired."
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
mockall = { version = "^0.13", optional = true}
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
mockall = ["dep:mockall"]
